--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
   flutter_share: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons :
+  image_path: "Graphicalstuff/Logo.png"
+  android: true
 
 dev_dependencies:
   flutter_test:
